<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".activities.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:textColor="#545870"
            android:textStyle="bold"
            android:text="@string/signup_txt"/>
        <TextView
            android:id="@+id/disc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:textColor="#545870"
            android:layout_marginTop="10dp"
            android:text="@string/disc"/>
        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:padding="6dp"
            android:layout_below="@id/disc"
            android:layout_marginTop="20dp"
            android:hint="@string/hint"/>
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:padding="6dp"
            android:layout_below="@id/edit_email"
            android:layout_marginTop="15dp"
            android:hint="@string/hit"/>
        <EditText
            android:id="@+id/edit_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:padding="6dp"
            android:layout_below="@id/edit_password"
            android:layout_marginTop="15dp"
            android:hint="@string/hi"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/create_account"
            android:layout_marginTop="30dp"
            android:textColor="#fff"
            android:background="@drawable/button_radius"
            android:layout_below="@id/edit_re_password"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="8dp"
            android:textColor="#545870"
            android:layout_centerHorizontal="true"
            android:id="@+id/txt_ha"/>
        <TextView
            android:id="@+id/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_our"
            android:layout_below="@id/txt_ha"
            />
        <TextView
            android:id="@+id/policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_ha"
            android:layout_toRightOf="@id/read"
            android:textColor="#ED5276"
            android:layout_marginLeft="3dp"
            android:text="@string/privacy_policy"/>
        <TextView
            android:id="@+id/and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_ha"
            android:layout_toRightOf="@id/policy"
            android:layout_marginLeft="3dp"
            android:text="@string/and"/>
        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_ha"
            android:layout_toRightOf="@id/and"
            android:textColor="#ED5276"
            android:layout_marginLeft="3dp"
            android:text="@string/content_policy"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_below="@id/content"
            android:layout_marginTop="40dp"
            android:textColor="#545870"
            android:layout_centerHorizontal="true"
            android:id="@+id/txt_have"/>
        <Button
            android:id="@+id/re_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/txt_have"
            android:layout_marginTop="20dp"
            android:textColor="#545870"
            android:background="@drawable/btn_radius"
            android:text="@string/login"
            />

    </RelativeLayout>

</RelativeLayout>