<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgot_password"
    tools:context=".activities.ChangePasswordActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:titleTextColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="Change Password"
            android:visibility="gone"
            android:textColor="#3E454C"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:drawableLeft="@drawable/icon_ionic_ios_arrow_back"
            android:textColor="#FFF"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:textColor="#3E454C"
            android:fontFamily="@font/montserrat_bold"
            android:text="Change Password"/>
        <TextView
            android:id="@+id/disc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:textColor="#3E454C"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginBottom="30dp"
            android:text="Here we change the password with new"/>

        <RelativeLayout
            android:id="@+id/old_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/disc"
            android:layout_marginTop="15dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textColorHint="#3E454C"
                android:background="@drawable/new_login_boarder"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/icon_feather_lock"
                    android:drawablePadding="15dp"
                    android:textColor="#53B9C6"
                    android:background="#00000000"
                    android:backgroundTint="#00000000"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textStyle="normal"
                    android:layout_margin="15dp"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:hint="@string/old_password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/visible"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_visibility"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                />
            <ImageView
                android:id="@+id/in_visible"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:visibility="visible"
                android:src="@drawable/ic_visibility_off_black_24dp"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />


        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/new_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/old_password_layout"
            android:layout_marginTop="15dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textColorHint="#3E454C"
                android:background="@drawable/new_login_boarder"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/icon_feather_lock"
                    android:drawablePadding="15dp"
                    android:textColor="#53B9C6"
                    android:background="#00000000"
                    android:backgroundTint="#00000000"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textStyle="normal"
                    android:layout_margin="15dp"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:hint="@string/new_password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/new_pass_visible"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_visibility"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                />
            <ImageView
                android:id="@+id/new_pass_in_visible"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:visibility="visible"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_visibility_off_black_24dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                />


        </RelativeLayout>

<!--
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/new_login_boarder"
            android:singleLine="true"
            android:visibility="gone"
            android:padding="10dp"
            android:layout_below="@id/disc"
            android:layout_marginTop="20dp"
            android:hint="@string/old_password"/>
-->
<!--
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/new_login_boarder"
            android:singleLine="true"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_below="@id/layout_old_password"
            android:layout_marginTop="15dp"
            android:hint="@string/new_password"/>
-->



        <RelativeLayout
            android:id="@+id/conform_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_password_layout"
            android:layout_marginTop="15dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_conform_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textColorHint="#3E454C"
                android:background="@drawable/new_login_boarder"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_conform_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/icon_feather_lock"
                    android:drawablePadding="15dp"
                    android:textColor="#53B9C6"
                    android:background="#00000000"
                    android:backgroundTint="#00000000"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textStyle="normal"
                    android:layout_margin="15dp"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:hint="@string/confirm_new_password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/conform_pass_visible"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_visibility"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                />
            <ImageView
                android:id="@+id/conform_pass_in_visible"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:visibility="visible"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_visibility_off_black_24dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                />


        </RelativeLayout>



<!--
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/new_login_boarder"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_below="@id/layout_new_password"
            android:layout_marginTop="15dp"
            android:hint="@string/confirm_new_password"
            />
-->
        <Button
            android:id="@+id/btn_cahange_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="Change Password"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="80dp"
            android:textColor="#fff"
            android:backgroundTint="#3E454C"
            android:background="@drawable/new_login_boarder"
            android:layout_below="@id/conform_password_layout"/>
    </RelativeLayout>

</RelativeLayout>